--- a/doc/README
+++ b/doc/README
@@ -35,7 +35,7 @@ REQUIREMENTS:
 The 1.1 branch requires textutils >= 2.0.21 or coreutils.
 In addition for the gui versions:
 
-For the 2.40 branch (fedora ? or higher)
+For the 2.40 branch (fedora core 2 or higher)
     gtk2     >= 2.4 (ftp://ftp.gtk.org/pub/gtk/)
     python   >= 2.3 (http://www.python.org/download/)
     libglade >= 2.4 (http://ftp.gnome.org/pub/GNOME/sources/libglade/)
