--- a/man/fslint-gui.1
+++ b/man/fslint-gui.1
@@ -1,4 +1,4 @@
-.TH fslint-gui "1" "June 2006" "fslint" "User Commands"
+.TH fslint-gui "1" "July 2009" "fslint" "User Commands"
 .SH NAME
 fslint-gui \- A GUI wrapper for the individual fslint command line tools
 .SH SYNOPSIS
@@ -9,8 +9,10 @@ fslint-gui \- A GUI wrapper for the individual fslint command line tools
 fslint is a toolset to find various problems with filesystems,
 including duplicate files and problematic filenames etc.
 .PP
-To access the command line tools one can cd to, or add to $PATH the
-/usr/share/fslint/fslint directory on a standard install.
+To access the individual command line tools one can change to, or add
+to $PATH the /usr/share/fslint/fslint directory on a standard install.
+Each of the commands in that directory have a --help option which
+further details their parameters.
 .SH PARAMETERS
 If [PATHS] are specified, they become the default search path,
 otherwise the current directory becomes the default.
@@ -25,7 +27,7 @@ Written by Padraig Brady
 .SH "REPORTING BUGS"
 Report bugs to <P@draigBrady.com>.
 .SH COPYRIGHT
-Copyright \(co 2000-2008 Padraig Brady <P@draigBrady.com>.
+Copyright \(co 2000-2009 Padraig Brady <P@draigBrady.com>.
 .br
 
 This program is free software; you can redistribute it and/or modify
